--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <h1 class="title">The Outcome Network</h1>
                     <p>A Leader in Workforce Solutions and Behavior Support.</p>
-                    <a href="about.html" class="btn btn-default btn-radius btn-outline white-border white-text fill-white">Read More</a>&nbsp;&nbsp; <a href="#" class="btn btn-default animated btn-radius theme-bg white-text">Submit Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                    <a href="about.html" class="btn btn-default btn-radius btn-outline white-border white-text fill-white">Read More</a>&nbsp;&nbsp; <a href="application.html" class="btn btn-default animated btn-radius theme-bg white-text">Submit Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
