--- a/application.html
+++ b/application.html
@@ -218,7 +218,8 @@
                                 <input type="email" name="email" id="email" class="form-control" placeholder="Email*">
                             </div>
                             <div class="form-group col-md-12">
-                                <input type="file" name="email" id="email" style="padding: 7px 20px; border: 2px solid #e6e6e6; width: 100%;" placeholder="Email*">
+                               <label for="file">Upload Your Resume*</label>
+                                <input type="file" name="email" id="file" style="padding: 7px 20px; border: 2px solid #e6e6e6; width: 100%;" placeholder="Email*">
                             </div>
                             
                             
@@ -227,26 +228,6 @@
                             </div>
                         </div>
                     </form>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-    <section class="inner-intro small-intro theme-bg">
-        <div class="container">
-            <div class="row intro-title">
-                <div class="col-sm-12 text-center">
-                    <h1 class="title">The Outcome Network</h1>
-                </div>
-                <div class="col-sm-12">
-                    <div class="row">
-                        <div class="col-sm-12 text-center"><span class="sub-title">The most powerful business network on earth</span></div>
-                        <div style="display: flex;justify-content: center; width: 100%;padding-top: 30px;">
-                            <a href="#" class=" btn btn-default btn-outline animated btn-radius white-border theme-bg white-text fill-white">Submit Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
