--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"> <i class="fa fa-bars"></i> </button>
                 <a class="navbar-brand" href="index.html">
-                    <img style="width: 150px" src="images/brand/logo-2.png" class="logo logo-display" alt="">
-                    <img style="width: 150px" src="images/brand/logo-1.png" class="logo logo-scrolled" alt=""> </a>
+                    <img src="images/brand/logo-2.png" class="logo logo-display" alt="">
+                    <img src="images/brand/logo-1.png" class="logo logo-scrolled" alt=""> </a>
             </div>
             <!-- End Header Navigation -->
             <!-- Megamenu -->
@@ -94,8 +94,12 @@
                            <li><a href="services.html#behavior">Behavior Supports</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a href="employers.html">Employers</a>
+                    <li class="dropdown">
+                        <a href="" class="dropdown-toggle" data-toggle="dropdown">Employers</a>
+                        <ul class="dropdown-menu">
+                           <li><a href="providers.html">Our Service Providers</a></li>
+                            <li><a href="request.html">Request Fof Employee</a></li>
+                        </ul>
                     </li>
                     <li class="dropdown">
                         <a href="" class="dropdown-toggle" data-toggle="dropdown">Career Gateway</a>
@@ -116,7 +120,7 @@
             <a href="#" class="close-side"><i class="fa fa-times"></i></a>
             <div class="widget">
                 <p class="text-center my-3"><img  style="height: 50px; margin: 20px 0;" src="images/brand/logo-2.png" class="logo" alt="" /></p>
-                <p>Lorem ipsum dolor sit amet, consec tetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>Our network connect people experiencing disability to support and services all across Ontari.</p>
             </div>
             <div class="widget">
                 <h6 class="text-uppercase">OFFICE 01</h6>
@@ -148,7 +152,7 @@
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <h1 class="title">The Outcome Network</h1>
                     <p>A Leader in Workforce Solutions and Behavior Support.</p>
-                    <a href="about.html" class="btn btn-default btn-radius btn-outline white-border white-text fill-white">Read More</a>&nbsp;&nbsp; <a href="application.html" class="btn btn-default animated btn-radius theme-bg white-text">Submit Resume <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+                    <a href="request.html" class="btn btn-default btn-radius btn-outline white-border white-text fill-white">Request An Employee</a>&nbsp;&nbsp; <a href="application.html" class="btn btn-default animated btn-radius theme-bg white-text">Submit Your Resume<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
@@ -462,7 +466,7 @@
                             <div class="divider"></div>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
-                        <a href="team.html" class="btn btn-default btn-radius btn-outline white-border white-text fill-white btn-xs">View More</a>
+                        <a href="" class="btn btn-default btn-radius btn-outline white-border white-text fill-white btn-xs">View More</a>
                     </div>
                 </div>
                 <div class="col-md-9 col-sm-12">
@@ -666,40 +670,34 @@
         <div class="footer-top">
             <div class="container">
                 <div class="row">
+                   <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
+                        <h6 class="text-uppercase">About</h6>
+                        <img style="width: 200px; margin-bottom: 20px" src="images/brand/logo-2.png" alt="">
+                        <p>A Leader in Workforce Solutions and Behavior Support.</p>
+                    </div>
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
-                        <h6 class="text-uppercase">About Pecto</h6>
+                        <h6 class="text-uppercase">Services</h6>
+                        <ul class="list-unstyled">
+                            <li><a href="services.html#staffing">Staffing</a></li>
+                            <li><a href="services.html#transportation">Transportation</a></li>
+                            <li><a href="services.html#behavior">Behavior Supports</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
+                        <h6 class="text-uppercase">Our Story</h6>
+                        <ul class="list-unstyled">
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="mission.html">Mission</a></li>
+                            <li><a href="unique.html">How Are We Unique</a></li>
+                            <li><a href="culture.html">Our Culture</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
+                        <h6 class="text-uppercase">Contact</h6>
                         <ul class="list-unstyled address">
                             <li><i class="lnr lnr-map-marker"></i><span>387 Madison Ave, New York, NY 10118</span></li>
                             <li><i class="lnr lnr-envelope"></i><a href="mailto:theoutcomenetwork@gmail.com">theoutcomenetwork@gmail.com</a></li>
                             <li><i class="lnr lnr-phone-handset"></i><span>416-995-9105</span></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
-                        <h6 class="text-uppercase">Categories</h6>
-                        <ul class="list-unstyled">
-                            <li><a href="#">Printing </a></li>
-                            <li><a href="#">Specimen book</a></li>
-                            <li><a href="#">Simply random</a></li>
-                            <li><a href="#">Embarrassing</a></li>
-                            <li><a href="#">Making </a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
-                        <h6 class="text-uppercase">ARCHIVES</h6>
-                        <ul class="list-unstyled">
-                            <li><a href="#">May 2017</a></li>
-                            <li><a href="#">April 2017</a></li>
-                            <li><a href="#">March 2017</a></li>
-                            <li><a href="#">February 2017</a></li>
-                            <li><a href="#">January 2017</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
-                        <h6 class="text-uppercase">RECENT POSTS</h6>
-                        <ul class="list-unstyled recent-post">
-                            <li><a href="#">Be My Guest<span>May 10,2017</span></a></li>
-                            <li><a href="#">Ownage In The Mountains<span>February 14,2017</span></a></li>
-                            <li><a href="#">The Field<span>March 23,2017</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -709,8 +707,8 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-6">© 2019 Alidesigns All rights reserved</div>
-                    <div class="col-sm-6 text-right">
+                    <div class="col-sm-8">© Copyright By The Outcome Network All rights reserved And Designed by <a href="https://www.freelancer.com/hireme/mdakshohag">Ali Shohag</a>.</div>
+                    <div class="col-sm-4 text-right">
                         <ul class="list-unstyled list-inline footer-social">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
