--- a/index.html
+++ b/index.html
@@ -108,8 +108,11 @@
                             <li><a href="application.html">Application for Employment</a></li>
                         </ul>
                     </li>
-                     <li class="">
+                     <li>
                         <a href="contact.html" >Contact Us</a>
+                    </li>
+                     <li>
+                        <a href="registration.html" class="btn btn-default btn-outline hover-effect2" style="padding: 10px;margin: 10px 0">Registration</a>
                     </li>
                 </ul>
             </div>
@@ -125,9 +128,9 @@
             <div class="widget">
                 <h6 class="text-uppercase">OFFICE 01</h6>
                 <ul class="list-unstyled address">
-                    <li><i class="lnr lnr-map-marker"></i><span>387 Madison Ave, New York, NY 10118</span></li>
-                    <li><i class="lnr lnr-envelope"></i><span>theoutcomenetwork@gmail.com</span></li>
-                    <li><i class="icon-phone"></i><span>416-995-9105</span></li>
+                    <li><i class="lnr lnr-map-marker"></i><span>The Outcome Network ON, Canada.</span></li>
+                    <li><i class="lnr lnr-envelope"></i><span>otto@theoutcomenetwork.ca</span></li>
+                    <li><i class="icon-phone"></i><span>705-881-4615</span></li>
                 </ul>
             </div>
             <div class="widget">
@@ -146,17 +149,22 @@
     </nav>
     <!-- End Navigation -->
     <!-- Banner -->
-    <section class="full-height bg white-text header-slide single-image overlay" data-overlay-color="dark" data-overlay="8" data-bg-img="images/corporate/banner.jpg" data-jarallax-video="https://www.youtube.com/watch?v=SF4aHwxHtZ0">
+    <div class="div" style="position: relative; overflow: hidden" >
+        <video style="position: absolute; width: 130%;height: 130%;transform: translate(-50%,-50%);left:50%;top: 50%;" autoplay loop id="video-background" muted plays-inline>
+          <source src="video/bg.mkv" type="video/mp4">
+        </video>
+    <section class="full-height bg white-text header-slide single-image overlay" data-overlay-color="dark" data-overlay="8" >
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <h1 class="title">The Outcome Network</h1>
-                    <p>A Leader in Workforce Solutions and Behavior Support.</p>
+                    <p>A Leader in staffing Solutions and Behavior Support</p>
                     <a href="request.html" class="btn btn-default btn-radius btn-outline white-border white-text fill-white">Request An Employee</a>&nbsp;&nbsp; <a href="application.html" class="btn btn-default animated btn-radius theme-bg white-text">Submit Your Resume<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
                 </div>
             </div>
         </div>
     </section>
+    </div>
     <!-- End Banner -->
     <!-- About -->
     <section>
@@ -695,9 +703,9 @@
                     <div class="col-sm-3 col-xs-6 col-xx-12 mb-4">
                         <h6 class="text-uppercase">Contact</h6>
                         <ul class="list-unstyled address">
-                            <li><i class="lnr lnr-map-marker"></i><span>387 Madison Ave, New York, NY 10118</span></li>
-                            <li><i class="lnr lnr-envelope"></i><a href="mailto:theoutcomenetwork@gmail.com">theoutcomenetwork@gmail.com</a></li>
-                            <li><i class="lnr lnr-phone-handset"></i><span>416-995-9105</span></li>
+                            <li><i class="lnr lnr-map-marker"></i><span>The Outcome Network ON, Canada.</span></li>
+                            <li><i class="lnr lnr-envelope"></i><a href="mailto:otto@theoutcomenetwork.ca">otto@theoutcomenetwork.ca</a></li>
+                            <li><i class="lnr lnr-phone-handset"></i><span>705-881-4615</span></li>
                         </ul>
                     </div>
                 </div>
