--- a/contact.html
+++ b/contact.html
@@ -104,8 +104,11 @@
                             <li><a href="application.html">Application for Employment</a></li>
                         </ul>
                     </li>
-                     <li class="">
+                     <li>
                         <a href="contact.html" >Contact Us</a>
+                    </li>
+                     <li>
+                        <a href="registration.html" class="btn btn-default btn-outline hover-effect2" style="padding: 10px;margin: 10px 0">Registration</a>
                     </li>
                 </ul>
                      </div>
